# chatroom-perry

./: .gitignore  README.md  package.json  perry.toml  pnpm-lock.yaml  test_timer.ts
docs/: bug-audio-callback-registered.md  build-and-run.md  build.rs.md  chatroom.md  conversion-bet-ts-rust.md  fix-perry-link.md  functions.md  integration-problems-solved.md  lessons-extention-dev.md  naming-convention.md  plugin-or-patch.md  real-time-speech-recognition.md  speech-recognition-arch.md  string-handling-in-perry-ffi.md  support-linkage-external-libs.md  timer-pump.md  typescript-rust-in-perry.md  typescript-to-rust-by-example.md  typescript-to-rust-in-extensions.md  update-ui-from-audio-thread.md  voice-to-text.md  waveform-and-speech.md  web-audio-and-speech-api.md
extensions/perry-vosk/: package.json
extensions/perry-vosk/crate-linux/: Cargo.toml  build.rs
extensions/perry-vosk/crate-linux/src/: lib.rs
extensions/perry-vosk/crate-linux/tests/: convert_file_test.rs  error_handling_test.rs  model_test.rs
extensions/perry-vosk/src/: index.d.ts  index.ts
scripts/: install-vosk-model.sh
src/: AudioRecorder.ts  SpeechRecognizer.ts  main.ts
tests/: test-string-basic.ts  test-vosk-availability.ts  test-vosk-convert-edge-cases.ts  test-vosk-convert-file.ts  test-vosk-start-stop.ts
