[package]
name = "perry-vosk"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
path = "src/lib.rs"

[dependencies]
vosk = "0.3.1"
hound = "3.5"
once_cell = "1.19"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
perry-ffi = { path = "../../../../perry/crates/perry-ffi" }

[dev-dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"